# 3DEngineCpp

./: .gitignore  3DEngineCpp.sln  C++CodingStyleGuide.txt  CMakeLists.txt  Makefile  README.md  Unix-Build.sh  Unix-BuildDebug.sh  Unix-Clean.sh  Unix-GenCodeBlocksProject.sh  Unix-GitPull.sh  Unix-GitPush.sh  Windows-Clean.bat  Windows-GenVisualStudioProject.bat  _PushToGithub.sh  run
3DEngineCpp/: 3DEngine.h  3DEngineCpp.vcxproj  3DEngineCpp.vcxproj.filters  3DGameEngineCpp.cbp  3DGameEngineCpp.depend  3DGameEngineCpp.layout  Makefile  basicShader.cpp  basicShader.h  camera.cpp  camera.h  coreEngine.cpp  coreEngine.h  forwardAmbient.cpp  forwardAmbient.h  forwardDirectional.cpp  forwardDirectional.h  forwardPoint.cpp  forwardPoint.h  forwardSpot.cpp  forwardSpot.h  freeLook.cpp  freeLook.h  freeMove.cpp  freeMove.h  game.cpp  game.h  gameComponent.h  gameObject.cpp  gameObject.h  input.cpp  input.h  lighting.cpp  lighting.h  main.cpp  main.h  mappedValues.h  material.h  math3d.h  matrix4f.cpp  (+36 more)
3DEngineCpp/Debug/: 3DEngineCpp.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
3DEngineCpp/Release/: 3DEngineCpp.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3DEngineCpp/res/shaders/: basicFragment.fs  basicFragment120.fs  basicVertex.vs  basicVertex120.vs  filter-gausBlur7x1.fs  filter-null.fs  forward-ambient.fs  forward-ambient.vs  forward-directional.fs  forward-point.fs  forward-point.vs  forward-spot.fs  lighting.fsh  lighting.glh  lighting.vsh  lightingMain.fsh  phongFragment.fs  phongVertex.vs  sampling.glh  shadowMapGenerator.fs  shadowMapGenerator.vs
app/: CMakeLists.txt
app/physics/: CMakeLists.txt
app/physics/src/: main.cpp
app/render/: CMakeLists.txt
app/render/src/: main.cpp
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindSDL2.cmake
engine/: CMakeLists.txt
engine/src/: 3DEngine.h  camera.cpp  coreEngine.cpp  freeMove.h  game.cpp  input.cpp  input.h  lighting.cpp  mappedValues.cpp  mesh.cpp  meshRenderer.h  plane.cpp  plane.h  profiling.cpp  referenceCounter.h  renderingEngine.cpp  renderingEngine.h  shader.h  simdemulator.h  transform.cpp  transform.h  window.h
res/shaders/: basicShader.fs  basicShader.glsl  basicShader.vs  common.glh  filter-fxaa.fs  filter-fxaa.glsl  filter-gausBlur7x1.fs  filter-gausBlur7x1.glsl  filter-gausBlur7x1.vs  filter-null.fs  filter-null.glsl  filter-null.vs  filter.vsh  forward-ambient.fs  forward-ambient.glsl  forward-ambient.vs  forward-directional.fs  forward-directional.glsl  forward-directional.vs  forward-point.fs  forward-point.glsl  forward-point.vs  forward-spot.fs  forward-spot.glsl  forward-spot.vs  forwardlighting.glh  forwardlighting.vsh  lighting.fsh  lighting.glh  lighting.vsh  lightingMain.fsh  nullShader.glsl  sampling.glh  shadowMapGenerator.fs  shadowMapGenerator.glsl  shadowMapGenerator.vs
src/: 3DEngine.h  aabb.cpp  aabb.h  boundingSphere.cpp  boundingSphere.h  camera.cpp  camera.h  coreEngine.cpp  coreEngine.h  entityComponent.h  freeLook.cpp  freeLook.h  freeMove.cpp  freeMove.h  game.cpp  game.h  gameComponent.h  gameObject.cpp  gameObject.h  input.cpp  input.h  intersectData.h  lighting.cpp  lighting.h  main.cpp  mappedValues.cpp  mappedValues.h  material.cpp  material.h  math3d.cpp  math3d.h  mesh.cpp  mesh.h  meshRenderer.h  profiling.cpp  profiling.h  referenceCounter.h  renderUtil.cpp  renderUtil.h  renderingEngine.cpp  (+20 more)
src/components/: freeLook.cpp  freeLook.h  freeMove.h  meshRenderer.h  physicsEngineComponent.cpp  physicsEngineComponent.h  physicsObjectComponent.cpp  physicsObjectComponent.h
src/core/: coreEngine.cpp  coreEngine.h  entity.h  game.cpp  game.h  input.cpp  mappedValues.h  math3d.h  profiling.cpp  profiling.h  time.cpp  transform.cpp  util.cpp  util.h
src/physics/: aabb.cpp  aabb.h  boundingSphere.cpp  boundingSphere.h  collider.cpp  collider.h  intersectData.h  physicsEngine.cpp  physicsEngine.h  physicsObject.cpp  physicsObject.h  plane.cpp  plane.h
src/rendering/: camera.cpp  camera.h  lighting.cpp  lighting.h  material.h  mesh.cpp  mesh.h  renderingEngine.cpp  renderingEngine.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/staticLibs/: stb_image.h
